[package]
name = "solid-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-traits = "0.2"
rand = "0.8"
slow_primes = "0.1.14"
either = "1.8"
libm = "0.2"

[lib]
name = "solid"
path = "src/mod.rs"
crate-type = ["rlib", "dylib", "staticlib"]

[profile.dev]
opt-level = 0